# Custom-Clip-Finder-v2

./: .cursorrules  .gitignore  CONTEXT.md  EXAMPLE_MASTER_LEARNINGS_FORMAT.json  GOOGLE_SHEETS_SETUP.md  PROJECT_HISTORY.md  README.md  SETUP_GITHUB.md  analyze_and_learn.py  analyze_restructures_v1.py  auto_update_brain.sh  batch_process_ai.py  check_available_models.py  cleanup_project.py  clip_extractor.py  continuous_learning_system.py  create_clips.py  create_clips_v2.py  create_clips_v3_ensemble.py  create_clips_v4_integrated.py  create_clips_v4_integrated_BACKUP_20251225.py  create_training_history.py  debug_training_data.py  demo.py  demo_full_ai.py  demo_restructure.py  export_clips_restructured.py  export_clips_with_xml.py  fix_evolution_summary.py  fix_hybrid_learner.py  learn_from_viral_example.py  learnings_extractor.py  main.py  master_learnings.py  master_learnings_v2.py  master_restructure_v1.py  prepare_restructure_data.py  process_video_full_ai.py  pyproject.toml  requirements.txt  (+15 more)
brain/: BRAIN_PRINCIPLES.json  PRINCIPLES.json  __init__.py  analyze.py  learn.py  learn_restructure.py  vector_store.py
config/: config.yaml  detected_models.json
data/: MASTER_LEARNINGS.json  MASTER_LEARNINGS_backup_20251217_222100.json  accounts_metadata.json  ai_viral_patterns.json  deep_learned_patterns.json  editing_patterns.json  learned_patterns.json  training_stats.json
docs/: DYNAMIC_MODEL_DETECTION.md  PERFORMANCE_OPTIMIZATIONS.md  SYSTEM_ARCHITECTURE_FINAL.md  TRAINING_DATA_PAIRS.md  WORKFLOW_ADD_CLIPS.md
models/: __init__.py  auto_detect.py  base.py  ensemble.py  schemas.py
pipeline/: __init__.py  compose.py  discover.py  export.py  godmode.py  optimized.py  validate.py
prompts/: __init__.py  compose.py  discover.py  identities.py  validate.py
scripts/: extract_accounts.py
tests/: mock_dieter_lange_results.json  test_dieter_lange.py  validate_examples.py
utils/: __init__.py  cache.py  download.py  premiere.py  transcribe.py  video.py
v1_archive/: ANALYSE_EXTRACT_CLIPS_PROBLEME.md  CONTEXT.md  EXAMPLE_MARKDOWN_OUTPUT.md  FUNCTION_SIGNATURES.md  LEARN_FROM_VIRAL_EXAMPLE_OUTLINE.md  PROJECT_HISTORY.md  SYSTEM_OVERVIEW.md  analyze_and_learn_v2.py  analyze_isolated_clips.py  demo_intelligent.py  fix_format_features.py  patch_hybrid_learner.py  premiere_xml_generator.py  restore_training_data.py  retrain_with_validation.py  run_learning_pipeline.py  synthesize_principles.py  test_2stage_fast.py  test_claude.py  test_export_v2.py  test_extraction_only.py  test_restructure_impact.py  test_segment_structure.py  test_stage_1_75.py  test_stage_1_75_lebenslinie.py  test_stage_2_5.py  train_from_csv.py  (+6 more)
(+21 files in other folders)
